<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="105dp"
    android:layout_weight="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/alarmname"
        android:textSize="16sp"
        android:text="@string/alarm_name_placeholder" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/alarmpercent"
        android:textSize="16sp"
        android:text="@string/alarm_percent_placeholder"
        android:layout_below="@+id/alarmname"/>
    <Button
        android:id="@+id/editbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/alarmname"
        android:text="@string/editalarm"/>
    <Button
        android:id="@+id/deletebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/editbutton"
        android:text="@string/deletebutton"/>
</RelativeLayout>