<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/titleBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:text="@string/app_name"
                android:textSize="35sp"/>
        </LinearLayout>
    <LinearLayout
        android:id="@+id/batteryGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <SeekBar
            android:id="@+id/filler"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="209dp"
            android:layout_height="80dp"
            android:max="5"
            android:progressDrawable="@drawable/batterymeter"
            android:splitTrack="false"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/percentbox"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:inputType="number"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percent"
            android:textSize="25sp"/>
    </LinearLayout>

    <Switch
        android:id="@+id/on"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />


    <Spinner
        android:id="@+id/soundspinner"
        android:layout_width="209dp"
        android:layout_height="wrap_content" />

    <SeekBar
        android:id="@+id/volBar"
        android:layout_width="300dp"
        android:layout_height="wrap_content" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/additionalButton"
        android:layout_width="65dp"
        android:layout_height="65dp"
        app:cornerRadius="10dp"
        android:layout_gravity="start"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/plus"
        android:textSize="25sp"
        />
    <LinearLayout
        android:id="@+id/scratchpad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"/>
</LinearLayout>